--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxtjs/tailwindcss": "6.13.1",
+    "@tailwindcss/vite": "^4.0.5",
     "nuxt": "^3.15.4",
+    "tailwindcss": "^4.0.5",
     "vue": "latest",
     "vue-router": "latest"
   }
