--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/eslint": "1.0.1",
     "@nuxtjs/tailwindcss": "6.13.1",
     "@tailwindcss/vite": "^4.0.5",
+    "eslint": "^9.0.0",
     "nuxt": "^3.15.4",
     "tailwindcss": "^4.0.5",
     "vue": "latest",
     "vue-router": "latest"
+  },
+  "devDependencies": {
+    "prettier": "^3.5.0",
+    "prettier-plugin-tailwindcss": "^0.6.11"
   }
 }
