--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@formkit/core": "^1.6.9",
+    "@formkit/nuxt": "^1.6.9",
+    "@formkit/vue": "^1.6.9",
     "@nuxt/eslint": "1.0.1",
     "@nuxtjs/tailwindcss": "6.13.1",
     "@tailwindcss/vite": "^4.0.5",
     "eslint": "^9.0.0",
     "nuxt": "^3.15.4",
+    "nuxt-auth-utils": "0.5.14",
     "tailwindcss": "^4.0.5",
     "vue": "latest",
     "vue-router": "latest"
