--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "eslint": "^9.0.0",
     "nuxt": "^3.15.4",
     "nuxt-auth-utils": "0.5.14",
+    "pg": "^8.13.2",
     "tailwindcss": "^4.0.5",
     "vue": "latest",
     "vue-router": "latest"
   },
   "devDependencies": {
+    "@types/pg": "^8.11.11",
     "prettier": "^3.5.0",
     "prettier-plugin-tailwindcss": "^0.6.11"
   }
