--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@formkit/nuxt": "^1.6.9",
     "@formkit/vue": "^1.6.9",
     "@nuxt/eslint": "1.0.1",
+    "@nuxt/icon": "1.10.3",
     "@nuxtjs/tailwindcss": "6.13.1",
     "@tailwindcss/vite": "^4.0.5",
     "eslint": "^9.0.0",
