--- a/package.json
+++ b/package.json
@@ -10,14 +10,13 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@formkit/core": "^1.6.9",
-    "@formkit/nuxt": "^1.6.9",
-    "@formkit/vue": "^1.6.9",
     "@nuxt/eslint": "1.0.1",
     "@nuxt/icon": "1.10.3",
     "@nuxtjs/tailwindcss": "6.13.1",
     "@tailwindcss/vite": "^4.0.5",
+    "bcrypt": "^5.1.1",
     "eslint": "^9.0.0",
+    "jsonwebtoken": "^9.0.2",
     "nuxt": "^3.15.4",
     "nuxt-auth-utils": "0.5.14",
     "pg": "^8.13.2",
@@ -26,6 +25,8 @@
     "vue-router": "latest"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/pg": "^8.11.11",
     "prettier": "^3.5.0",
     "prettier-plugin-tailwindcss": "^0.6.11"
