--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "pg": "^8.13.2",
     "tailwindcss": "^4.0.5",
     "vue": "latest",
+    "vue-advanced-cropper": "^2.8.9",
     "vue-router": "latest"
   },
   "devDependencies": {
