--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxt/icon": "1.10.3",
     "@nuxtjs/tailwindcss": "6.13.1",
     "@tailwindcss/vite": "^4.0.5",
+    "@vueuse/core": "^13.0.0",
     "bcrypt": "^5.1.1",
     "eslint": "^9.0.0",
     "jsonwebtoken": "^9.0.2",
