--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "private": true,
   "type": "module",
   "scripts": {
+    "lint": "eslint . --ext .js,.mjs,.vue",
+    "lint:fix": "eslint . --ext .js,.mjs,.vue --fix",
+    "format": "prettier --write .",
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
@@ -16,7 +19,6 @@
     "@tailwindcss/vite": "^4.0.5",
     "@vueuse/core": "^13.0.0",
     "bcrypt": "^5.1.1",
-    "eslint": "^9.0.0",
     "jsonwebtoken": "^9.0.2",
     "nuxt": "^3.15.4",
     "nuxt-auth-utils": "0.5.14",
@@ -30,6 +32,9 @@
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/pg": "^8.11.11",
+    "eslint": "^9.22.0",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-nuxt": "^4.0.0",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11"
   }
