--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "type": "module",
   "scripts": {
+    "dev:socket": "tsx socket/index.ts",
     "lint-staged": "lint-staged",
     "lint": "eslint . --ext .js,.mjs,.vue",
     "lint:fix": "eslint . --ext .js,.mjs,.vue --fix",
@@ -25,6 +26,8 @@
     "nuxt": "^3.15.4",
     "nuxt-auth-utils": "0.5.14",
     "pg": "^8.13.2",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.0.5",
     "vue": "latest",
     "vue-advanced-cropper": "^2.8.9",
@@ -40,6 +43,7 @@
     "husky": "^9.1.7",
     "lint-staged": "^15.5.0",
     "prettier": "^3.5.3",
-    "prettier-plugin-tailwindcss": "^0.6.11"
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "tsx": "^4.19.3"
   }
 }
